# logistics-erp

./: .gitignore  AI_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  ERP設計憲法.md  INVENTORY_CONTEXT.md  ISSUES.md  MASTER_CONTEXT.md  PROJECT.md  README.md  ROADMAP.md  db-schema.md  package.json  pnpm-lock.yaml  開発ルール.md
apps/api/: package.json  (+1 more)
docs/: B7-46-inventory-write-edge-plan.md  B7-59_inventory_display.md  CHATGPT_SHARE.md  LOGISTICS_ERP_OVERVIEW_FOR_CHATGPT.md  README.md  SUPABASE_MIGRATIONS_DETAILED_FOR_CHATGPT.md  ai-prompt-template.md  api-responsibility-map.md  architecture-local-vs-cloud.md  db-inventory-design.md  edge-functions-migration-plan.md  erp-roadmap.md  idempotency-and-trace-id.md  identifier-design.md  importer-flow.md  inventory-flow.md  inventory-spa-pwa-screen-definition.md  logistics-erp-current-status.md  logistics_erp_roadmap_phase1.md  phase1-expected-data.md  phase2-1-scan-idempotency.md  phase2-2-pwa-scanner-shell.md  phase2-3-ambiguous-resolution-ui.md  phase2-4-scan-contract-tests.md  phase2-scan-foundation.md  trace-events-design.md  trace-id-db-design.md  trace-id-design.md  trace-id-migration-plan.md  warehouse-location-active-update.md
services/pdf-extractor/: README.md  pyproject.toml
services/pdf-extractor/src/pdf_extractor/: __init__.py
supabase/: config.toml  verify_phase_b2_1_adjust.sql  verify_phase_b2_2_rebuild_inventory_current.sql  verify_phase_b2_3_trace_id.sql  verify_phase_b2_4_trace_events.sql  verify_phase_b3_1_auth_profiles_roles.sql  verify_phase_b5_1_distributed_inventory_out.sql  verify_phase_b5_3_inventory_in.sql
(+156 files in other folders)
